<resources>
    <string name="facebook_app_id" translatable="false">1770196659861627</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1770196659861627</string>

    <string name="app_name">Group Manager</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_me">About me</string>
    <string name="birthday">Birthday</string>
    <string name="email_address">Email Address</string>

    <string name="Login_Introduction_1">
        Liên kết công việc:
        \nCác nhiệm vụ trong một nhóm không phải là các nhiệm vụ riêng biệt.
        \nChúng là sự xâu kết của nhiều nhiệm vụ khác mà tất cả đều cùng hướng đến một mục tiêu chung
    </string>
    <string name="Login_Introduction_2">
        Liên kết thành viên:
        \nĐể một dự án luôn bắt kịp tiến độ và trôi chảy,
        sự liên kết giữa các thành viên là một điều
        không thể thiếu. Họ phải luôn duy trì sự tương tác
        để đảm bảo việc hiểu rõ các thành viên khác đang làm gì.
    </string>
    <string name="members">Thành viên</string>
    <string name="channels">Danh sách kênh chat</string>
    <string name="tasks">Danh sách nhiệm vụ</string>
    <string name="search">Tìm kiếm</string>
    <string name="button_login_with_facebook">Đăng nhập với Facebook</string>
    <string name="name_new_project">Name your new project</string>
    <string name="name">Tên</string>
    <string name="birthdate">Ngày sinh</string>
    <string name="deadline">Hạn nộp</string>
    <string name="assigned">Người tạo</string>
    <string name="create_date">Ngày tạo</string>
    <string name="last_update">Cập nhật lần cuối</string>
    <string name="gender">Giới tính</string>
    <string name="sender">Người gửi</string>
    <string name="channel_list">Danh sách kênh</string>
    <string name="add_channel_name">Điền vào tên kênh</string>
    <string name="message">Nhập tin nhắn…</string>
    <string name="add_members">Thêm thành viên</string>
    <string name="add_task_name">Tên nhiệm vụ</string>
    <string name="add_deadline">Điền vào hạn nộp</string>
    <string name="add_description">Điền vào mô tả</string>
    <string name="completed_task">Nhiệm vụ đã hoàn thành</string>
    <string name="project">Dự án</string>
    <string name="task">Nhiệm vụ</string>
    <string name="channel">Kênh</string>
    <string name="channel_name">Tên kênh</string>
    <string name="text_project">Dự án</string>
    <string name="description">Mô tả</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="createNewProjectTitle">Tạo dự án mới</string>
    <string name="member_list">Danh sách thành viên</string>
    <string name="task_name">Tên nhiệm vụ</string>
</resources>
