<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uit.group.manager.TaskCreateActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="horizontal">

        <components.Button
            android:layout_width="@dimen/size_1"
            android:layout_height="match_parent"
            app:_icon="" />

        <components.Line
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <components.TextBold
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Thêm nhiệm vụ mới" />


    </android.support.v7.widget.LinearLayoutCompat>

    <components.Line
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:_isFull="true" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <components.TextBold
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_1"
                android:text="Tên nhiệm vụ" />

            <components.TextBold
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_1"
                android:text="@string/deadline" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <components.TextInput
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1"
                android:hint="@string/add_task_name" />

            <components.TextInput
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1"
                android:hint="@string/add_deadline"
                android:onClick="showDatePickerDialog" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <components.TextBold
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/description" />

    <components.TextInput
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/add_description"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


    <components.Line
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:_isFull="true" />

    <components.Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:gravity="center"
        app:_text="CREATE TASK" />

    <components.Line
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:_isFull="true" />
</android.support.v7.widget.LinearLayoutCompat>
