<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="uit.group.manager.TaskEditActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/size"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <components.Button
                android:layout_width="@dimen/size"
                android:layout_height="match_parent"
                app:_icon="" />

            <components.Line
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <components.Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:_icon=""
                app:_text="Edit Task" />


        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <components.Text
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_weight="1"
                    android:text="@string/name" />

                <components.Line
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />

                <components.TextInput
                    android:id="@+id/taskedit_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_weight="3" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <components.Text
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_weight="1"
                    android:text="@string/description" />

                <components.Line
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />

                <components.TextInput
                    android:id="@+id/taskedit_description"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_weight="3" />
            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <components.Text
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_weight="1"
                    android:text="@string/deadline" />

                <components.Line
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />

                <components.TextInput
                    android:id="@+id/taskedit_deadline"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size"
                    android:layout_weight="3"
                    android:onClick="showDatePickerDialog" />
            </android.support.v7.widget.LinearLayoutCompat>

            <components.Text
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                android:text="@string/members" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/list_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="3dp"
                    android:scrollbarThumbVertical="@color/blueTransparent"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/item_user" />
            </ScrollView>

            <components.Line
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <components.Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/size"
                app:_text="Save Task" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</layout>
