<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="object.Task"/>
    </data>

    <android.support.v7.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="uit.group.manager.TaskDetailActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal">

            <components.Button
                android:layout_width="@dimen/size_1"
                android:layout_height="match_parent"
                app:_icon="" />

            <components.Line
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="goBackToTaskList" />

            <components.TextBold
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{task.name}"
                tools:text="task.name"/>

            <components.Line
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <components.Button
                android:layout_width="@dimen/size_1"
                android:layout_height="@dimen/size_1"
                app:_icon=""/>
        </android.support.v7.widget.LinearLayoutCompat>

        <components.Line
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:_isFull="true"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <components.TextBold
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/size_1"
                        android:text="@string/description"/>

                    <components.TextBold
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/size_1"
                        android:text="@string/assigned"/>

                    <components.TextBold
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/size_1"
                        android:text="@string/create_date"/>

                    <components.TextBold
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/size_1"
                        android:text="@string/deadline"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <components.Text
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_1"
                        android:text="@{task.description}"
                        tools:text="task.description"/>

                    <components.Text
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_1"
                        android:text="@{task.assigned.name}"
                        tools:text="task.assigned"/>

                    <components.Text
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_1"
                        android:text="@{task.createdate.toString()}"
                        tools:text="task.createdate"/>

                    <components.Text
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_1"
                        android:text="@{task.deadline.toString()}"
                        tools:text="task.deadline"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.LinearLayoutCompat>


            <components.TextBold
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/members" />

            <android.support.v7.widget.RecyclerView

                android:id="@+id/list_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scrollbarSize="3dp"
                android:scrollbarThumbVertical="@color/blueTransparent"
                android:scrollbars="vertical"
                tools:itemCount="2"
                tools:listitem="@layout/item_user" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</layout>
